<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".opening.opening.views.auth.PasswordSecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="45dp"
            android:contentDescription="@string/done"
            android:src="@drawable/done_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/done"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/check_the_email_address_associated_with_your_account"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/back_to_sing_in_page_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:elevation="25dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/sing_in"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/send_again_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:text="@string/if_you_did_not_receive_a_code_resend"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>


</ScrollView>