<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".opening.opening.views.auth.SingUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:viewBindingIgnore="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_name_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:autofillHints="@string/user_name"
                android:background="@drawable/edit_text_style"
                android:cursorVisible="true"
                android:elegantTextHeight="true"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="10sp" />

            <EditText
                android:id="@+id/user_mail_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:autofillHints="@string/password"
                android:background="@drawable/edit_text_style"
                android:cursorVisible="true"
                android:elegantTextHeight="true"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="10sp" />

            <EditText
                android:id="@+id/user_sing_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:autofillHints="@string/password"
                android:background="@drawable/edit_text_style"
                android:cursorVisible="true"
                android:elegantTextHeight="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10sp" />

            <EditText
                android:id="@+id/user_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="15dp"
                android:autofillHints="@string/password"
                android:background="@drawable/edit_text_style"
                android:cursorVisible="true"
                android:elegantTextHeight="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10sp" />

            <TextView
                android:id="@+id/terms_and_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="8dp"
                android:text="@string/by_creating_an_account_you_agree_terms_of_use_and_privacy_policy"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:elevation="25dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/sing_up"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/i_have_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"
                android:text="@string/i_am_already_a_member"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
