<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".opening.opening.views.auth.PasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/just_enter_the_email_address_you_ve_uset_to_register_with_us_and_we_ll_send_you_a_reset_link"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/user_mail_forgot_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:autofillHints="@string/e_mail"
                android:background="@drawable/edit_text_style"
                android:cursorVisible="true"
                android:elegantTextHeight="true"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="10sp" />

            <Button
                android:id="@+id/forgot_password_send_mail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:textAllCaps="false"
                android:layout_marginBottom="20dp"
                android:elevation="25dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/send"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>